objects/ASI_CRM_Contract_Cost__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_A_C_Code__c</fullName>
        <formula>ASI_CRM_Investment_Payment__r.ASI_CRM_A_C_Code__r.ASI_MFM_A_C_Code__c</formula>
        <label>A/C Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_A_C_Description__c</fullName>
        <formula>ASI_CRM_Investment_Payment__r.ASI_CRM_A_C_Code__r.ASI_MFM_A_C_Description__c</formula>
        <label>A/C Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CNY_Est__c</fullName>
        <label>CNY(Est.)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Activity_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Contract Costs</relationshipLabel>
        <relationshipName>Contract_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Chinese_Description__c</fullName>
        <label>Chinese Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Contract_Amount_Rate__c</fullName>
        <label>Contract Amount Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Contract_Amount__c</fullName>
        <label>Contract Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Contract Costs</relationshipLabel>
        <relationshipName>Contract_Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Cost_Type__c</fullName>
        <label>Cost Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Estimate_Amount_Rate__c</fullName>
        <label>Estimate Amount Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Estimate_Amount__c</fullName>
        <label>Estimate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Other_Cost_Payment_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Cost (Payment Request)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Service_Requirement_Central__c</fullName>
        <label>Service Requirement (Central)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Service_Requirement_East__c</fullName>
        <label>Service Requirement (East)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Service_Requirement_North__c</fullName>
        <label>Service Requirement (North)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Service_Requirement_Northwest__c</fullName>
        <label>Service Requirement (Northwest)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Service_Requirement_Southwest__c</fullName>
        <label>Service Requirement (Southwest)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Svc_Req__c</fullName>
        <description>For displaying service requirement in contract preview</description>
        <label>Service Requirement (South)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract_Terms__c</fullName>
        <label>Contract Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Exchange_Rate__c</fullName>
        <formula>ASI_CRM_CN_Contract__r.ASI_CRM_CN_Exchange_Rate__c</formula>
        <label>Exchange Rate</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Investment_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investment Payment</label>
        <referenceTo>ASI_CRM_Investment_Payment__c</referenceTo>
        <relationshipLabel>Contract Costs</relationshipLabel>
        <relationshipName>Contract_Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Investment_Value_Base__c</fullName>
        <label>Investment Value (Base)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Investment_Value__c</fullName>
        <label>Investment Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_MAF_Est__c</fullName>
        <label>MAF(Est.)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Other_Est__c</fullName>
        <label>Other(Est.)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Payment_Schedule__c</fullName>
        <label>Payment Schedule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contract Cost</label>
    <nameField>
        <label>Contract Cost Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Costs</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_Contract_Cost</fullName>
        <active>true</active>
        <label>CN Contract Cost</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_CN_Heavy_Contract_Cost</fullName>
        <active>true</active>
        <label>CN Heavy Contract Cost</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_MO_Contract_Cost</fullName>
        <active>true</active>
        <label>ASI CRM MO - Contract Cost</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_CRM_MO_ContractChgChk</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	$User.BypassVR__c != TRUE, 
	CONTAINS($RecordType.DeveloperName, &apos;ASI_CRM_MO&apos;),
	CONTAINS(ASI_CRM_CN_Contract__r.RecordType.DeveloperName, &apos;ASI_CRM_MO&apos;),
	NOT(ISNEW()),
	ISCHANGED(ASI_CRM_CN_Contract__c)
)</errorConditionFormula>
        <errorMessage>Cannot change the contract on an existing contract cost entry</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_CRM_MO_StatusChk_ContractCost</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
	$User.BypassVR__c != TRUE, 
	CONTAINS($RecordType.DeveloperName, &apos;ASI_CRM_MO&apos;),
	CONTAINS(ASI_CRM_CN_Contract__r.RecordType.DeveloperName, &apos;ASI_CRM_MO&apos;),
	TEXT(ASI_CRM_CN_Contract__r.ASI_TH_CRM_Contract_Status__c) != &apos;Draft&apos;,
	NOT(ASI_CRM_CN_Contract__r.ASI_CRM_Is_Processing__c = true)
)</errorConditionFormula>
        <errorMessage>You can only add/modify contract cost on a &apos;Draft&quot; contract</errorMessage>
    </validationRules>
</CustomObject>